fixed some css when expanding and collapsing menu

--- a/src/App.css
+++ b/src/App.css
@@ -158,3 +158,13 @@ h1 {
 .resize {
   height: 100%;
 }
+.css-pwcg7p-MuiCollapse-root {
+  width:230px;
+}
+.css-9l5vo-MuiCollapse-wrapperInner{
+  width:230px;
+}
+
+.css-smkl36-MuiCollapse-wrapper{
+  width:230px;
+}
